# GraftAI

./: .env.example  .gitattributes  .gitignore  .pyre_configuration  .slugignore  .vercelignore  AUTH_RECONSTRUCTION_PLAN.md  AuthLayout.tsx  BACKEND_AUDIT_REPORT.md  DEEP_CORE_AUDIT_REPORT.md  PRODUCTION_CHECKLIST.md  PROJECT_TECHNICAL_SPEC.md  Procfile  README.md  SRS.md  alerting-rules.yaml  app.py  apply_missing_columns.py  auth_test_output.txt  claude.md  db_migrate.py  db_migrate_meetings.py  docker-compose.yml  fix_neon_branch.py  fix_neon_branch2.py  fix_test_user2.py  graftai_manifest.json  migrate_now.py  migrate_sync.py  package-lock.json  package.json  patch_bookings.py  patch_frontend_api.py  render.yaml  setup-dev.bat  setup-dev.sh  test_api_security.sh  test_db.py  test_db_query.py  test_get_db.py  (+6 more)
backend/: .dockerignore  .env.example  .gitignore  .pyre_configuration  Dockerfile  README.md  app.py  check_env.py  dev.db  package-lock.json  package.json  pip_audit_results.txt  pyproject.toml  pytest.ini  pytest_smoke_output.txt  pytest_test_results.txt  requirements.txt  temp_debug_sqlalchemy.py  test_db.py  test_llm_init.py  test_out.txt  test_results.txt  tmp_send_email.py  verify_zoom.py  worker.py
backend/ai/: decision_engine.py  decision_scenarios.py  fallback.py  llama_index_integration.py  llm_core.py  orchestrator.py  test_decision_engine.py
backend/alembic/: env.py
backend/api/: admin.py  advanced_analytics_routes.py  ai_chat.py  analytics.py  analytics_routes.py  api_key_routes.py  auth.py  automation_routes.py  billing.py  booking_automation.py  bookings.py  calendar.py  deps.py  email_template_routes.py  event_types.py  integration_routes.py  integrations.py  main.py  mfa.py  monitoring.py  notifications.py  organizations.py  plugins.py  proactive.py  public.py  resource_routes.py  sync_stream.py  team_routes.py  uploads.py  users.py  video_conference_routes.py  webhooks.py  workflows.py  zoom.py
backend/auth/: __init__.py  config.py  logic.py  mfa.py  routes.py  saml_service.py  schemes.py
backend/core/: celery_app.py  redis.py  saas_config.py
backend/migrations/: add_sync_tracking_columns.sql  add_zoom_service_columns.sql
backend/models/: __init__.py  api_key.py  auth.py  automation.py  base.py  booking.py  dsr.py  email_template.py  integration.py  migrations.sql  organization.py  preference.py  resource.py  tables.py  team.py  user.py  user_token.py  video_conference.py
backend/plugins/: README.md
backend/routes/: audit_routes.py  calendar_routes.py  gdpr_routes.py
backend/schemas/: __init__.py  event_type.py  profile.py
backend/scripts/: __init__.py  auth_schema.sql  db_repair.py  drop_all_tables.py  ensure_user_columns.py  expand_sync_schema.py  inspect_db.py  migrate_calendar.py  migrate_oauth_token_encryption.py  reset_database.py  reset_tier.py  seed_admin_user.py  simulate_exchange.py  sync_worker.py  update_schema.py  users_compat_patch.pgsql  users_compat_patch.sql  verify_user_schema.py
backend/services/: __init__.py  access_control.py  advanced_analytics_service.py  ai.py  ai_adapter.py  ai_memory.py  ai_quota.py  ai_sync.py  ai_tools.py  analytics.py  api_keys.py  apple_auth.py  audit.py  auth_service.py  auth_utils.py  bg_tasks.py  billing.py  booking_automation.py  bookings.py  cache.py  calcom.py  calendar_sync.py  calendar_utils.py  consent.py  context_optimizer.py  data_migrations.py  db_sync.py  dlq_handlers.py  dlq_service.py  email.py  email_parser_service.py  email_template_service.py  fido2_did.py  google_auth.py  google_calendar.py  jobs.py  langchain_client.py  live_visitor_tracker.py  llm_context.py  mail_service.py  (+30 more)
backend/tasks/: __init__.py  automation_tasks.py  calendar_tasks.py  email_tasks.py  (+3 more)
(+490 files in other folders)
