[tool.poetry]
name = "graftai-backend"
version = "1.0.0"
description = "Backend for GraftAI — AI-powered scheduling platform"
authors = ["GraftAI Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
pydantic = {version = "^2.6.0", extras = ["email"]}
asyncpg = "^0.29.0"
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
redis = "^5.0.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.0.20"
pinecone-client = "^3.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
authlib = "^1.2.0"
pyotp = "^2.9.0"
groq = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"