[tool.poetry]
name = "graftai-backend"
version = "1.0.0"
description = "Backend for GraftAI — AI-powered scheduling platform"
authors = ["GraftAI Team"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.110.0"
uvicorn = {version = "0.29.0", extras = ["standard"]}
pydantic = {version = "2.7.4", extras = ["email"]}
asyncpg = "0.29.0"
sqlalchemy = {version = "2.0.0", extras = ["asyncio"]}
redis = "5.0.0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
langchain = "1.2.11"
langchain-openai = "1.1.12"
langchain-community = "0.4.1"
pinecone-client = "3.0.0"
pyyaml = "6.0"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.1"
httpx = "0.28.1"
authlib = "1.2.0"
pyotp = "2.9.0"
groq = "0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
black = "^24.0.0"
Cython = "^0.29.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"